# UCSC-SLAM

./: README.md
documentation/: V-REP as ROS Node.aux  V-REP as ROS Node.tex
project_ws/: 2018-02-07-16-26-58.bag
project_ws/devel/: _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
project_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
project_ws/devel/.private/vrep_ros_interface/: .catkin  .rosinstall  _setup_util.py  setup.sh
project_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  vrep_ros_interface.pc
project_ws/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
project_ws/devel/share/vrep_ros_interface/cmake/: vrep_ros_interfaceConfig-version.cmake  vrep_ros_interfaceConfig.cmake
project_ws/logs/vrep_ros_interface/: build.make.000.log.stderr
project_ws/src/simple_slam/: CMakeLists.txt  package.xml
project_ws/src/simple_slam/data/: data.csv
project_ws/src/simple_slam/msg/: landmark.msg
project_ws/src/simple_slam/src/: pyslam.py
project_ws/src/slam_node/: CMakeLists.txt  package.xml
project_ws/src/slam_node/msg/: landmark.msg
project_ws/src/slam_node/src/: pyslam.py  slam_node.py
project_ws/src/spm_node/: CMakeLists.txt  package.xml
project_ws/src/spm_node/src/: slam_node.cpp  spm_node.cpp
project_ws/src/vrep_plugin_imu/src/: ros_server_imu.cpp
scenes/: lidarRosExample.ttt  lidarRosExampleNoPath.ttt  lidarRosExamplePath.ttt  lidarRosExamplePath2.ttt  lidarRosExamplePath3.ttt  simpleslamscene.ttt
(+4 files in other folders)
